--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,4 +4,9 @@ runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
+hostPort = "127.0.0.1:8888"
+host = "127.0.0.1"
+BigsetPort = "18407"
+etcdPort = "0.0.0.0:2379"
+BigsetServiceID = "my-service-id"
 sqlconn = 
